# RoughLike

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/core/: CMakeLists.txt
include/core/Public/: settings.hpp
